# rbottle

./: Cargo.toml  README.md
src/: bottle.rs  ecdh.rs  errors.rs  hash.rs  idcard.rs  keychain.rs  keys.rs  lib.rs  membership.rs  signing.rs  utils.rs
tests/: aliceandbob_test.rs  bottle_test.rs  ecdh_test.rs  short_buffer_test.rs
