[package]
name = "rbottle"
version = "0.1.0"
edition = "2021"
authors = ["thanos vassilakis"]
license = "MIT"
description = "Rust implementation of Bottle protocol - layered message containers with encryption and signatures"
repository = "https://github.com/thanos/rbottle"

[dependencies]
# Cryptographic primitives
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
ecdsa = "0.16"
p256 = { version = "0.13", features = ["ecdh", "arithmetic"] }
p384 = { version = "0.13", features = ["ecdh", "arithmetic"] }
p521 = { version = "0.13", features = ["ecdh", "arithmetic"] }
rsa = "0.9"
x25519-dalek = "1.0"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bincode = "1.3"
hex = "0.4"
thiserror = "1.0"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
# Post-quantum cryptography (when available)
# pqcrypto-kyber = "0.5"  # ML-KEM
# pqcrypto-dilithium = "0.5"  # ML-DSA
# pqcrypto-sphincsplus = "0.5"  # SLH-DSA

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "bottle"
path = "tests/bottle_test.rs"

[[test]]
name = "ecdh"
path = "tests/ecdh_test.rs"

[[test]]
name = "aliceandbob"
path = "tests/aliceandbob_test.rs"


